--- a/assets/css/templates/frontend.css
+++ b/assets/css/templates/frontend.css
@@ -84,32 +84,6 @@
   body.admin-bar .dialog-close-button {
     top: 40px; } }
 
-.qazana-aspect-ratio-219 .qazana-fit-aspect-ratio {
-  padding-bottom: 42.8571%; }
-
-.qazana-aspect-ratio-169 .qazana-fit-aspect-ratio {
-  padding-bottom: 56.25%; }
-
-.qazana-aspect-ratio-43 .qazana-fit-aspect-ratio {
-  padding-bottom: 75%; }
-
-.qazana-aspect-ratio-32 .qazana-fit-aspect-ratio {
-  padding-bottom: 66.6666%; }
-
-.qazana-aspect-ratio-11 .qazana-fit-aspect-ratio {
-  padding-bottom: 100%; }
-
-.qazana-fit-aspect-ratio {
-  position: relative;
-  height: 0; }
-  .qazana-fit-aspect-ratio iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border: 0; }
-
 .qazana-hidden {
   display: none; }
 
@@ -1335,115 +1309,39 @@ ul.qazana-icon-list-items.qazana-inline-items {
 .qazana-widget-heading .qazana-heading-title.qazana-size-xxl {
   font-size: 5.9rem; }
 
-.qazana-widget-icon-box {
-  position: relative; }
-  @media (min-width: QAZANA_SCREEN_MD_MIN) {
-    .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-wrapper, .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-wrapper {
-      display: flex; }
-    .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-icon, .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-icon {
-      flex: 0 0 auto; }
-    .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-wrapper {
-      text-align: right;
-      flex-direction: row-reverse; }
-    .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-wrapper {
-      text-align: left;
-      flex-direction: row; }
-    .qazana-widget-icon-box.qazana-position-top .qazana-icon-box-img {
-      margin: auto; }
-    .qazana-widget-icon-box.qazana-vertical-align-top .qazana-icon-box-wrapper {
-      align-items: flex-start; }
-    .qazana-widget-icon-box.qazana-vertical-align-middle .qazana-icon-box-wrapper {
-      align-items: center; }
-    .qazana-widget-icon-box.qazana-vertical-align-bottom .qazana-icon-box-wrapper {
-      align-items: flex-end; }
-    .qazana-widget-icon-box.qazana-view-animated-1 {
-      max-width: 100%;
-      width: 100%;
-      position: relative; }
-      .qazana-widget-icon-box.qazana-view-animated-1 .qazana-icon-box-wrapper {
-        text-align: center;
-        width: 100%;
-        display: inline-block;
-        border-radius: 4px;
-        padding: 0;
-        position: relative;
-        z-index: 2; }
-        .qazana-widget-icon-box.qazana-view-animated-1 .qazana-icon-box-wrapper:hover .front {
-          transform: translateY(-75%);
-          border-radius: 0; }
-        .qazana-widget-icon-box.qazana-view-animated-1 .qazana-icon-box-wrapper:hover .back {
-          transform: translateY(0); }
-      .qazana-widget-icon-box.qazana-view-animated-1 .height-adjust {
-        margin-top: 100%; }
-      .qazana-widget-icon-box.qazana-view-animated-1 .qazana-icon-box-inner {
-        position: absolute;
-        overflow: hidden;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        border-radius: 4px;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-        -webkit-transform: translateZ(0);
-        -moz-transform: translateZ(0);
-        transform: translateZ(0); }
-      .qazana-widget-icon-box.qazana-view-animated-1 .back,
-      .qazana-widget-icon-box.qazana-view-animated-1 .front {
-        transition: all 500ms cubic-bezier(1, 0, 0.6, 1);
-        backface-visibility: hidden; }
-        .qazana-widget-icon-box.qazana-view-animated-1 .back::before,
-        .qazana-widget-icon-box.qazana-view-animated-1 .front::before {
-          content: '';
-          height: 100%;
-          display: inline-block;
-          vertical-align: middle; }
-      .qazana-widget-icon-box.qazana-view-animated-1 .front {
-        background: #f7f7f7;
-        z-index: 2;
-        border-radius: 4px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%; }
-        .qazana-widget-icon-box.qazana-view-animated-1 .front .front-inner-wrap {
-          width: 100%;
-          display: inline-block;
-          display: table;
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%); }
-      .qazana-widget-icon-box.qazana-view-animated-1 .back {
-        background: #ccc;
-        z-index: 3;
-        border-radius: 0 0 4px 4px;
-        position: absolute;
-        top: 25%;
-        left: 0;
-        height: 75%;
-        width: 100%;
-        transform: translateY(100%); }
-      .qazana-widget-icon-box.qazana-view-animated-1 .qazana-icon-box-title {
-        margin-top: 25px; }
-    .qazana-widget-icon-box.qazana-view-align-left .qazana-icon-box {
-      display: flex; }
-    .qazana-widget-icon-box.qazana-view-align-left .qazana-icon {
-      position: absolute;
-      left: 0; }
-    .qazana-widget-icon-box.qazana-view-align-left .qazana-icon-box-content {
-      margin-left: 90px; } }
-  @media (max-width: QAZANA_SCREEN_SM_MAX) {
-    .qazana-widget-icon-box .qazana-icon-box-icon {
-      margin-left: auto !important;
-      margin-right: auto;
-      margin-bottom: 15px !important; } }
+@media (min-width: QAZANA_SCREEN_MD_MIN) {
+  .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-wrapper, .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-wrapper {
+    display: flex; }
+  .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-icon, .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-icon {
+    flex: 0 0 auto; }
+  .qazana-widget-icon-box.qazana-position-right .qazana-icon-box-wrapper {
+    text-align: right;
+    flex-direction: row-reverse; }
+  .qazana-widget-icon-box.qazana-position-left .qazana-icon-box-wrapper {
+    text-align: left;
+    flex-direction: row; }
+  .qazana-widget-icon-box.qazana-position-top .qazana-icon-box-img {
+    margin: auto; }
+  .qazana-widget-icon-box.qazana-vertical-align-top .qazana-icon-box-wrapper {
+    align-items: flex-start; }
+  .qazana-widget-icon-box.qazana-vertical-align-middle .qazana-icon-box-wrapper {
+    align-items: center; }
+  .qazana-widget-icon-box.qazana-vertical-align-bottom .qazana-icon-box-wrapper {
+    align-items: flex-end; } }
+
+@media (min-width: QAZANA_SCREEN_MD_MIN) and (max-width: QAZANA_SCREEN_SM_MAX) {
+  .qazana-widget-icon-box .qazana-icon-box-icon {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-bottom: 15px; } }
+
+@media (min-width: QAZANA_SCREEN_MD_MIN) {
   .qazana-widget-icon-box .qazana-icon-box-wrapper {
     text-align: center; }
   .qazana-widget-icon-box .qazana-icon-box-title a {
     color: inherit; }
   .qazana-widget-icon-box .qazana-icon-box-description {
-    margin: 0; }
+    margin: 0; } }
 
 .qazana-widget .qazana-icon-list-items.qazana-inline-items {
   margin-right: -8px;
