--- a/includes/extensions/piechart/assets/css/direction/style-rtl.css
+++ b/includes/extensions/piechart/assets/css/direction/style-rtl.css
@@ -4,23 +4,32 @@
   left: 50%;
   z-index: 1;
   max-width: 100%;
-  transform: rotateY(180deg) translateX(50%); }
+  -webkit-transform: rotateY(180deg) translateX(50%);
+          transform: rotateY(180deg) translateX(50%); }
 
 .qazana-widget-piechart .qazana-piechart {
   width: 100%;
   position: relative;
   text-align: center; }
   .qazana-widget-piechart .qazana-piechart-clockwise-yes canvas {
-    transform: rotateY(0) translateX(-50%); }
+    -webkit-transform: rotateY(0) translateX(-50%);
+            transform: rotateY(0) translateX(-50%); }
   .qazana-widget-piechart .qazana-piechart-number {
     position: relative;
     margin: 0 auto;
     width: 160px;
     height: 160px;
-    border-radius: 50%;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
     line-height: 160px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center; }
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
     .qazana-widget-piechart .qazana-piechart-number:before {
       position: absolute;
       top: 0;
@@ -28,19 +37,35 @@
       bottom: 0;
       left: 0;
       border: 1px solid grey;
-      border-radius: inherit;
+      -webkit-border-radius: inherit;
+              border-radius: inherit;
       content: ''; }
     .qazana-widget-piechart .qazana-piechart-number-prefix {
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
       text-align: right; }
     .qazana-widget-piechart .qazana-piechart-number-suffix {
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
       text-align: left;
       font-size: 70%; }
     .qazana-widget-piechart .qazana-piechart-number-progress {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       letter-spacing: -2px;
       font-size: 35px; }
   .qazana-widget-piechart .qazana-piechart-title a {
@@ -50,22 +75,44 @@
 
 @media (min-width: 768px) {
   .qazana-widget-piechart.qazana-position-left .qazana-piechart, .qazana-widget-piechart.qazana-position-right .qazana-piechart {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center; }
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
   .qazana-widget-piechart.qazana-position-right .qazana-piechart {
     text-align: right;
-    flex-direction: row-reverse; }
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
   .qazana-widget-piechart.qazana-position-left .qazana-piechart {
     text-align: left;
-    flex-direction: row; }
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row; }
   .qazana-widget-piechart.qazana-position-top .qazana-piechart-number {
     margin: auto;
     text-align: center; }
   .qazana-widget-piechart.qazana-vertical-align-top .qazana-piechart {
-    align-items: flex-start; }
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
   .qazana-widget-piechart.qazana-vertical-align-middle .qazana-piechart {
-    align-items: center; }
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
   .qazana-widget-piechart.qazana-vertical-align-bottom .qazana-piechart {
-    align-items: flex-end; } }
-
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end; } }
 /*# sourceMappingURL=style-rtl.css.map */
