--- a/assets/dev/scss/frontend/widgets/link.scss
+++ b/assets/dev/scss/frontend/widgets/link.scss
@@ -1,75 +1,73 @@
 .qazana-link {
-  transition: $transition-hover;
+    transition: $transition-hover;
 
-  .qazana-link-wrapper {
-    display: flex;
-    position: relative;
-    align-items: center;
-  }
+        display: flex;
+        position: relative;
+        align-items: center;
 
-  &.qazana-align-icon-right .qazana-link-wrapper {
-    flex-direction: row-reverse;
-  }
-
-  .qazana-align-icon- {
-    &right {
-      margin-left: 5px;
+    .qazana-align-icon-right & {
+        flex-direction: row-reverse;
     }
 
-    &left {
-      margin-right: 5px;
+    .qazana-align-icon- {
+        &right {
+            margin-left: 5px;
+        }
+
+        &left {
+            margin-right: 5px;
+        }
     }
-  }
 }
 
 .qazana-align- {
-    &right .qazana-link-wrapper{
+    &right .qazana-link {
         justify-content: flex-end;
     }
 
-    &left .qazana-link-wrapper{
+    &left .qazana-link {
         justify-content: flex-start;
     }
 
-    &center .qazana-link-wrapper{
+    &center .qazana-link {
         justify-content: center;
     }
 
-    &justify .qazana-link-wrapper {
+    &justify .qazana-link {
         justify-content: space-between;
     }
 }
 
 // Icon Hover
 .qazana-icon-hover-reveal-yes {
-  .qazana-link {
-    transition: all .5s cubic-bezier(.3,.95,.3,.95);
-  }
-
-  .qazana-link-icon {
-    overflow: hidden;
-    max-width: 0;
-    transition: all .5s cubic-bezier(.3,.95,.3,.95);
-
-    &.qazana-align-icon-right {
-      margin-left: 0;
+    .qazana-link {
+        transition: all .5s cubic-bezier(.3, .95, .3, .95);
     }
 
-    &.qazana-align-icon-left {
-      margin-right: 0;
-    }
-  }
+    .qazana-link-icon {
+        overflow: hidden;
+        max-width: 0;
+        transition: all .5s cubic-bezier(.3, .95, .3, .95);
 
-  .qazana-link:hover .qazana-link-icon,
-  .link:hover .qazana-link-icon {
-    max-width: 100px;
+        &.qazana-align-icon-right {
+            margin-left: 0;
+        }
 
-    &.qazana-align-icon-right {
-      margin-left: 10px;
+        &.qazana-align-icon-left {
+            margin-right: 0;
+        }
     }
 
-    &.qazana-align-icon-left {
-      margin-right: 10px;
+    .qazana-link:hover .qazana-link-icon,
+    .link:hover .qazana-link-icon {
+        max-width: 100px;
+
+        &.qazana-align-icon-right {
+            margin-left: 10px;
+        }
+
+        &.qazana-align-icon-left {
+            margin-right: 10px;
+        }
     }
-  }
 }
