--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -17,9 +17,8 @@
 @import "widgets/link";
 @import "widgets/menu-anchor";
 @import "widgets/progress";
-@import "widgets/slick/posts-slider-biggie";
-@import "widgets/slick/posts-slider-small";
 @import "widgets/social-icons";
+@import "widgets/star-rating";
 @import "widgets/testimonial";
 @import "widgets/text-editor";
 @import "widgets/tooltip";
