--- a/assets/dev/scss/frontend/frontend.scss
+++ b/assets/dev/scss/frontend/frontend.scss
@@ -41,6 +41,9 @@
 // Compatibility
 @import "compatibility";
 
+// Loaders
+@import "loader";
+
 // Visibility (for preview mode or front-end)
 .qazana:not(.qazana-edit-area-active) {
 	@include visibility() {
