--- a/assets/dev/scss/frontend/_slick.scss
+++ b/assets/dev/scss/frontend/_slick.scss
@@ -12,3 +12,406 @@
 	touch-action: pan-y;
 	-webkit-tap-highlight-color: transparent;
 }
+
+.slick-list {
+	position: relative;
+	overflow: hidden;
+	display: block;
+	margin: 0;
+	padding: 0;
+
+	&:focus {
+		outline: none;
+	}
+
+	&.dragging {
+		cursor: pointer;
+	}
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+	transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+	position: relative;
+	left: 0;
+	top: 0;
+	display: block;
+
+	&:before,
+	&:after {
+		content: "";
+		display: table;
+	}
+
+	&:after {
+		clear: both;
+	}
+
+	.slick-loading & {
+		visibility: hidden;
+	}
+}
+
+.slick-slide {
+	float: left;
+	height: 100%;
+	min-height: 1px;
+	display: none;
+
+	.qazana-slick-slider[dir="rtl"] & {
+		float: right;
+	}
+
+	img {
+		display: block;
+	}
+
+	&.slick-loading img {
+		display: none;
+	}
+
+	&.dragging img {
+		pointer-events: none;
+	}
+
+	.slick-initialized & {
+		display: block;
+	}
+
+	.slick-loading & {
+		visibility: hidden;
+	}
+
+	.slick-vertical & {
+		display: block;
+		height: auto;
+		border: 1px solid transparent;
+	}
+}
+
+.slick-arrow.slick-hidden {
+	display: none;
+}
+
+//
+// Slick Qazana Theme
+//
+
+.qazana-slick-slider {
+
+	.slick-loading .slick-list {
+		background: #fff;
+
+		&:after {
+			content: '\f1ce';
+			font-family: FontAwesome;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translateX(-50%) translateY(-50%);
+			animation: fa-spin 2s infinite linear;
+			font-size: 25px;
+			color: $editor-light;
+		}
+	}
+
+	// Arrows
+	.slick-prev,
+	.slick-next {
+		font-size: 0;
+		line-height: 0;
+		position: absolute;
+		top: 50%;
+		display: block;
+		width: 20px;
+		padding: 0;
+		transform: translate(0, -50%);
+		cursor: pointer;
+		color: transparent;
+		border: none;
+		outline: none;
+		background: transparent;
+
+		&:hover,
+		&:focus {
+			color: transparent;
+			outline: none;
+			background: transparent;
+
+			&:before {
+				opacity: 1;
+			}
+		}
+		&.slick-disabled:before {
+			opacity: .25;
+		}
+		&:before {
+			font-family: 'FontAwesome';
+			font-size: 35px;
+			line-height: 1;
+			opacity: .75;
+			color: white;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+		}
+	}
+
+	.slick-prev {
+		left: -25px;
+		[dir="rtl"] & {
+			left: auto;
+			right: -25px;
+		}
+		&:before {
+			content: '\f104';
+			[dir="rtl"] & {
+				content: '\f105';
+			}
+		}
+	}
+
+	.slick-next {
+		right: -25px;
+		[dir="rtl"] & {
+			left: -25px;
+			right: auto;
+		}
+		&:before {
+			content: '\f105';
+			[dir="rtl"] & {
+				content: '\f104';
+			}
+		}
+	}
+
+	// Dots
+	.slick-dotted.slick-slider {
+		margin-bottom: 30px;
+	}
+
+	ul.slick-dots {
+		position: absolute;
+		bottom: -25px;
+		display: block;
+		width: 100%;
+		padding: 0;
+		margin: 0;
+		list-style: none;
+		text-align: center;
+		line-height: 1;
+
+		li {
+			position: relative;
+			display: inline-block;
+			width: 20px;
+			height: 20px;
+			margin: 0;
+			padding: 0;
+			cursor: pointer;
+
+			button {
+				font-size: 0;
+				line-height: 0;
+				display: block;
+				width: 20px;
+				height: 20px;
+				padding: 5px;
+				cursor: pointer;
+				color: transparent;
+				border: 0;
+				outline: none;
+				background: transparent;
+
+				&:hover,
+				&:focus {
+					outline: none;
+
+					&:before {
+						opacity: 1;
+					}
+				}
+
+				&:before {
+					font-family: 'FontAwesome';
+					font-size: 6px;
+					line-height: 20px;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 20px;
+					height: 20px;
+					content: '\f111';
+					text-align: center;
+					opacity: .25;
+					color: black;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+				}
+			}
+			&.slick-active button:before {
+				opacity: .75;
+				color: black;
+			}
+		}
+	}
+
+	//
+	//  Custom Style for Qazana
+	//
+	.slick-arrows-inside {
+
+		.slick-prev {
+			left: 20px;
+			[dir="rtl"] & {
+				left: auto;
+				right: 20px;
+			}
+		}
+
+		.slick-next {
+			right: 20px;
+			[dir="rtl"] & {
+				left: 20px;
+				right: auto;
+			}
+		}
+	}
+
+	.slick-dots-inside {
+
+		.slick-dots {
+			bottom: 5px;
+		}
+
+		&.slick-dotted.slick-slider {
+			margin-bottom: 0;
+		}
+	}
+
+	.slick-slider {
+
+		.slick-prev,
+		.slick-next {
+			z-index: 1;
+		}
+	}
+
+	.slick-slide {
+
+		img {
+			margin: auto;
+		}
+	}
+}
+
+.slick-slideshow-large-container-smalls,
+.slick-slideshow-photo-gallery-container-smalls {
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 2px;
+    margin-top: -1px;
+
+    img {
+        border: 2px solid transparent;
+        line-height: 1;
+        display: block;
+    }
+
+    &.is-visible {
+        opacity: 1;
+    }
+
+    a.next,
+    a.prev {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: 30px;
+        height: 50px;
+        z-index: 3;
+        color: #fff;
+        transition: background-color 0.3s;
+        margin-top: -25px;
+
+        i {
+            display: block;
+            height: 50px;
+            line-height: 50px;
+            font-size: 10px;
+        }
+    }
+
+    a.next:hover,
+    a.prev:hover {
+        background: #000;
+    }
+
+    a.next.is-disabled,
+    a.prev.is-disabled {
+        color: #555;
+        cursor: default;
+
+        i {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+    }
+
+    a.prev {
+        left: 0;
+    }
+
+    a.next {
+        right: 0;
+    }
+
+    .slick-slide {
+        cursor: pointer;
+        position: relative;
+    }
+
+    .slick-slide.is-selected {
+        &:before {
+            font-family: 'eicons';
+            speak: none;
+            font-style: normal;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            font-size: 24px;
+            line-height: 24px;
+
+            color: white;
+            content: '\e901';
+            position: absolute;
+            right: 50%;
+            bottom: 50%;
+            margin-right: -12px;
+            margin-bottom: -12px;
+            z-index: 2;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            height: 100%;
+            width: 100%;
+            z-index: 1;
+            background-color: rgba(0, 0, 0, .1);
+        }
+
+        img {
+            border-color: #ffd800;
+        }
+    }
+
+    .slick-slide span {
+        display: block;
+    }
+}
